Configuracion index.html

--- a/src/index.html
+++ b/src/index.html
@@ -9,5 +9,22 @@
 </head>
 <body>
   <app-root></app-root>
+  <ul>
+    <li>
+      <a routerLink="/personajes" > Personajes </a>
+    </li>
+    <li>
+      <a routerLink="/peliculas" > Peliculas </a>
+    </li>
+    <li>
+      <a routerLink="/planetas" > Planetas </a>
+    </li>
+    <li>
+      <a routerLink="/vehiculos" > Vehiculos </a>
+    </li>
+  </ul>
+
+  <router-outlet></router-outlet>
+
 </body>
 </html>
