--- a/src/index.html
+++ b/src/index.html
@@ -2,29 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>starwars app</title>
-  <base href="/">
+  <title>Star Wars CI</title>
+  <base href="https://jsaavedrax.github.io/star-wars-ic/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="styles.280e991c5992f8630bc9.css"></head>
 </head>
 <body>
   <app-root></app-root>
-  <ul>
-    <li>
-      <a routerLink="/personajes" > Personajes </a>
-    </li>
-    <li>
-      <a routerLink="/peliculas" > Peliculas </a>
-    </li>
-    <li>
-      <a routerLink="/planetas" > Planetas </a>
-    </li>
-    <li>
-      <a routerLink="/vehiculos" > Vehiculos </a>
-    </li>
-  </ul>
-
-  <router-outlet></router-outlet>
-
 </body>
+<script src="runtime-es2015.1eba213af0b233498d9d.js" type="module"></script><script src="runtime-es5.1eba213af0b233498d9d.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="main-es2015.4e2d680ee34512176f51.js" type="module"></script><script src="main-es5.4e2d680ee34512176f51.js" nomodule defer></script></body>
 </html>
